Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

$Id:$

11/07/2009
  LUCENE-2043: Fix CommitIndexTask to also commit pending IndexReader
  changes (Mike McCandless)

11/07/2009
  LUCENE-2042: Added print.hits.field, to print each hit from the
  Search* tasks.  (Mike McCandless)

11/04/2009
  LUCENE-2029: Added doc.body.stored and doc.body.tokenized; each
  falls back to the non-body variant as its default.  (Mike McCandless)

10/28/2009
  LUCENE-1994: Fix thread safety of EnwikiContentSource and DocMaker
  when doc.reuse.fields is false.  Also made docs.reuse.fields=true
  thread safe.  (Mark Miller, Shai Erera, Mike McCandless)

8/4/2009
  LUCENE-1770: Add EnwikiQueryMaker (Mark Miller)

8/04/2009
  LUCENE-1773: Add FastVectorHighlighter tasks.  This change is a
  non-backwards compatible change in how subclasses of ReadTask define
  a highlighter.  The methods doHighlight, isMergeContiguousFragments,
  maxNumFragments and getHighlighter are no longer used and have been
  mark deprecated and package protected private so there's a compile
  time error.  Instead, the new getBenchmarkHighlighter method should
  return an appropriate highlighter for the task. The configuration of
  the highlighter tasks (maxFrags, mergeContiguous, etc.) is now
  accepted as params to the task.  (Koji Sekiguchi via Mike McCandless)

8/03/2009
  LUCENE-1778: Add support for log.step setting per task type. Perviously, if
  you included a log.step line in the .alg file, it had been applied to all
  tasks. Now, you can include a log.step.AddDoc, or log.step.DeleteDoc (for 
  example) to control logging for just these tasks. If you want to ommit logging
  for any other task, include log.step=-1. The syntax is "log.step." together
  with the Task's 'short' name (i.e., without the 'Task' part).
  (Shai Erera via Mark Miller)

7/24/2009
  LUCENE-1595: Deprecate LineDocMaker and EnwikiDocMaker in favor of