@@ -4,6 +4,10 @@ The Benchmark contrib package contains code for benchmarking Lucene in a variety
 
 $Id:$
 
+11/08/2009
+  LUCENE-2044: Added delete.percent.rand.seed to seed the Random instance
+  used by DeleteByPercentTask.  (Mike McCandless)
+
 11/07/2009
   LUCENE-2043: Fix CommitIndexTask to also commit pending IndexReader
   changes (Mike McCandless)
